# Trappist

./: Cargo.toml
.github/workflows/: build-runtime.yaml  build_docker.yml  check.yml  publish-docker.yml
node/tests/: running_the_node_and_interrupt.rs
pallets/nfts/: Cargo.toml
pallets/nfts/src/: lib.rs  types.rs
pallets/pallet-xnft/: Cargo.toml
pallets/pallet-xnft/src/: benchmarking.rs  lib.rs  test.rs
pallets/pallet-xnft/src/mock/: mod.rs  para.rs  relay.rs
runtime/stout/: Cargo.toml
runtime/stout/src/: lib.rs  xcm_config.rs
runtime/trappist/: Cargo.toml
runtime/trappist/src/: lib.rs  xcm_config.rs
zombienet/: full_network.toml  trappist_rococo.toml
