[package]
name = "pallet-xnft"
authors = ["Anonymous"]
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
	"derive",
] }
smallvec = "1.8.0"
serde = { version = "1.0.136", optional = true }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-nfts= {path="../nfts",default-features= false }
pallet-xcm ={ git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
xcm ={ git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
xcm-executor={ git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
 xcm-builder ={ git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.42" }
sp-runtime = { version = "7.0.0",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-io = { version = "7.0.0", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-std = { default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
sp-tracing = { default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-authorship = { default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
pallet-session = { default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
cumulus-primitives-core =  { git ="https://github.com/paritytech/cumulus", branch="polkadot-v0.9.42", default-features = false }
cumulus-pallet-xcm =  { git ="https://github.com/paritytech/cumulus", branch="polkadot-v0.9.42", default-features = false }
pallet-message-queue = {version = "7.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
polkadot-parachain = {default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.42" }
polkadot-runtime-parachains = {default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.42" }
parachain-info = {default-features = false, git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.42" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
cumulus-pallet-dmp-queue = {default-features = false, git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.42" }
cumulus-pallet-xcmp-queue = {default-features = false, git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.42" }
node-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
pallet-babe = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.42" }
primitives = {package = "polkadot-primitives", default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.42" }
pallet-timestamp = { default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }
polkadot-runtime-common = {default-features = false, git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.42" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.42", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.42", default-features = false }
sp-core = {default-features=false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[dev-dependencies]
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.42" }
frame-support-test = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.42" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"frame-benchmarking?/std",
	"pallet-timestamp/std",
	"polkadot-runtime-common/std",
	"primitives/std",
	"frame-support/std",
    "pallet-xcm/std",
	"cumulus-primitives-utility/std",
	"cumulus-pallet-parachain-system/std",
	"sp-std/std",
	"pallet-message-queue/std",
	"pallet-balances/std",
	"pallet-babe/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"scale-info/std",
	"sp-runtime/std",
	"parachain-info/std",
	"pallet-authorship/std",
	"pallet-session/std",
    "xcm-executor/std",
    "xcm/std",
	"pallet-nfts/std",
	"polkadot-parachain/std",
	 "polkadot-runtime-parachains/std",
     "xcm-builder/std",
	 "cumulus-primitives-core/std",
	 "cumulus-pallet-xcm/std",
	 "cumulus-pallet-dmp-queue/std",
	 "cumulus-pallet-xcmp-queue/std",
	 "node-primitives/std",
	 "sp-tracing/std"
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks"
]